@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022,2023 IBM Corporation and others.
+ * Copyright (c) 2022,2024 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,6 +12,7 @@
  *******************************************************************************/
 package jakarta.data.page;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -19,18 +20,18 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import jakarta.data.Sort;
-import jakarta.data.page.Pageable.Cursor;
-import jakarta.data.page.Pageable.Mode;
+import jakarta.data.page.PageRequest.Cursor;
+import jakarta.data.page.PageRequest.Mode;
 
 /**
- * Method signatures are copied from jakarta.data.repository.Pageable from the Jakarta Data repo.
+ * Method signatures are copied from jakarta.data.repository.PageRequest from the Jakarta Data repo.
  */
-record Pagination(long page,
+record Pagination<T>(long page,
                 int size,
-                List<Sort> sorts,
+                List<Sort<T>> sorts,
                 Mode mode,
                 Cursor type)
-                implements Pageable {
+                implements PageRequest<T> {
 
     Pagination {
         if (page < 1)
@@ -42,23 +43,46 @@ record Pagination(long page,
     }
 
     @Override
-    public Pageable afterKeyset(Object... keyset) {
-        return new Pagination(page, size, sorts, Mode.CURSOR_NEXT, new KeysetCursor(keyset));
+    public PageRequest<T> afterKeyset(Object... keyset) {
+        return new Pagination<T>(page, size, sorts, Mode.CURSOR_NEXT, new KeysetCursor(keyset));
     }
 
     @Override
-    public Pageable afterKeysetCursor(Pageable.Cursor cursor) {
-        return new Pagination(page, size, sorts, Mode.CURSOR_NEXT, cursor);
+    public PageRequest<T> afterKeysetCursor(PageRequest.Cursor cursor) {
+        return new Pagination<T>(page, size, sorts, Mode.CURSOR_NEXT, cursor);
+    }
+
+    private static final <E> List<E> append(List<E> list, E element) {
+        int size = list.size();
+        if (size == 0) {
+            return List.of(element);
+        } else {
+            Object[] array = list.toArray(new Object[size + 1]);
+            array[size] = element;
+            @SuppressWarnings("unchecked")
+            List<E> newList = (List<E>) Collections.unmodifiableList(Arrays.asList(array));
+            return newList;
+        }
     }
 
     @Override
-    public Pageable beforeKeyset(Object... keyset) {
-        return new Pagination(page, size, sorts, Mode.CURSOR_PREVIOUS, new KeysetCursor(keyset));
+    public PageRequest<T> asc(String property) {
+        return new Pagination<T>(page, size, append(sorts, Sort.asc(property)), mode, type);
     }
 
     @Override
-    public Pageable beforeKeysetCursor(Pageable.Cursor cursor) {
-        return new Pagination(page, size, sorts, Mode.CURSOR_PREVIOUS, cursor);
+    public PageRequest<T> ascIgnoreCase(String attribute) {
+        return new Pagination<T>(page, size, append(sorts, Sort.ascIgnoreCase(attribute)), mode, type);
+    }
+
+    @Override
+    public PageRequest<T> beforeKeyset(Object... keyset) {
+        return new Pagination<T>(page, size, sorts, Mode.CURSOR_PREVIOUS, new KeysetCursor(keyset));
+    }
+
+    @Override
+    public PageRequest<T> beforeKeysetCursor(PageRequest.Cursor cursor) {
+        return new Pagination<T>(page, size, sorts, Mode.CURSOR_PREVIOUS, cursor);
     }
 
     @Override
@@ -67,58 +91,73 @@ record Pagination(long page,
     }
 
     @Override
-    public Pagination next() {
+    public PageRequest<T> desc(String attribute) {
+        return new Pagination<T>(page, size, append(sorts, Sort.desc(attribute)), mode, type);
+    }
+
+    @Override
+    public PageRequest<T> descIgnoreCase(String attribute) {
+        return new Pagination<T>(page, size, append(sorts, Sort.descIgnoreCase(attribute)), mode, type);
+    }
+
+    @Override
+    public Pagination<T> next() {
         if (mode == Mode.OFFSET)
-            return new Pagination(page + 1, size, sorts, mode, null);
+            return new Pagination<T>(page + 1, size, sorts, mode, null);
         else
-            throw new UnsupportedOperationException("Not supported for keyset pagination. Instead use afterKeyset or afterKeysetCursor to provide the next keyset values or obtain the nextPageable from a KeysetAwareSlice.");
-    }
-
-    public static Pagination ofPage(long page) {
-        return new Pagination(page, 10, Collections.emptyList(), Mode.OFFSET, null);
-    }
-
-    public static Pagination ofSize(int size) {
-        return new Pagination(1, size, Collections.emptyList(), Mode.OFFSET, null);
+            throw new UnsupportedOperationException("Not supported for keyset pagination. Instead use afterKeyset or afterKeysetCursor to provide the next keyset values or obtain the nextPageRequest from a KeysetAwareSlice.");
     }
 
     @Override
-    public Pagination page(long pageNumber) {
-        return new Pagination(pageNumber, size, sorts, mode, type);
+    public Pagination<T> page(long pageNumber) {
+        return new Pagination<T>(pageNumber, size, sorts, mode, type);
     }
 
     @Override
-    public Pagination size(int maxPageSize) {
-        return new Pagination(page, maxPageSize, sorts, mode, type);
+    public Pagination<T> size(int maxPageSize) {
+        return new Pagination<T>(page, maxPageSize, sorts, mode, type);
     }
 
     @Override
-    public Pagination sortBy(Iterable<Sort> sorts) {
-        List<Sort> order;
-        if (sorts == null)
-            order = Collections.emptyList();
-        else
-            order = StreamSupport.stream(sorts.spliterator(), false).collect(Collectors.toUnmodifiableList());
-
-        return new Pagination(page, size, order, mode, type);
+    public Pagination<T> sortBy(Iterable<Sort<T>> sorts) {
+        List<Sort<T>> sortList = sorts instanceof List ? List.copyOf((List<Sort<T>>) sorts) : sorts == null ? Collections.emptyList() : StreamSupport.stream(sorts.spliterator(),
+                                                                                                                                                             false).collect(Collectors.toUnmodifiableList());
+        return new Pagination<T>(page, size, sortList, mode, type);
     }
 
     @Override
-    public Pagination sortBy(Sort... sorts) {
-        @SuppressWarnings("unchecked")
-        List<Sort> order = sorts == null ? Collections.EMPTY_LIST : List.of(sorts);
+    public PageRequest<T> sortBy(Sort<T> sort) {
+        return new Pagination<T>(page, size, List.of(sort), mode, type);
+    }
 
-        return new Pagination(page, size, order, mode, type);
+    @Override
+    public PageRequest<T> sortBy(Sort<T> sort1, Sort<T> sort2) {
+        return new Pagination<T>(page, size, List.of(sort1, sort2), mode, type);
+    }
+
+    @Override
+    public PageRequest<T> sortBy(Sort<T> sort1, Sort<T> sort2, Sort<T> sort3) {
+        return new Pagination<T>(page, size, List.of(sort1, sort2, sort3), mode, type);
+    }
+
+    @Override
+    public PageRequest<T> sortBy(Sort<T> sort1, Sort<T> sort2, Sort<T> sort3, Sort<T> sort4) {
+        return new Pagination<T>(page, size, List.of(sort1, sort2, sort3, sort4), mode, type);
+    }
+
+    @Override
+    public PageRequest<T> sortBy(Sort<T> sort1, Sort<T> sort2, Sort<T> sort3, Sort<T> sort4, Sort<T> sort5) {
+        return new Pagination<T>(page, size, List.of(sort1, sort2, sort3, sort4, sort5), mode, type);
     }
 
     @Override
     public String toString() {
-        StringBuilder b = new StringBuilder("Pageable{page=").append(page).append(", size=").append(size);
+        StringBuilder b = new StringBuilder("PageRequest{page=").append(page).append(", size=").append(size);
 
         if (type != null)
             b.append(", mode=").append(mode).append(", ").append(type.size()).append(" keys");
 
-        for (Sort o : sorts) {
+        for (Sort<T> o : sorts) {
             b.append(", ").append(o.property()).append(o.ignoreCase() ? " IGNORE CASE" : "").append(o.isDescending() ? " DESC" : " ASC");
         }
 
@@ -126,4 +165,5 @@ record Pagination(long page,
 
         return b.toString();
     }
+
 }
